tests/fuse/stdlib/full/http_test.fuse
// EXPECTED OUTPUT:
// === http.get connection refused ===
// error: true
// === http.post connection refused ===
// error: true
// === http.delete connection refused ===
// error: true
// === Response.ok ===
// 200 ok: true
// 404 ok: false
// === done ===
// done

import stdlib.full.http

@entrypoint
fn main() {
  // http.get — connection refused (nothing on port 1)
  println("=== http.get connection refused ===")
  val getResult = http.get("http://127.0.0.1:1/test")
  match getResult {
    Ok(resp) => println("error: false")
    Err(e) => println("error: true")
  }

  // http.post — connection refused
  println("=== http.post connection refused ===")
  val postResult = http.post("http://127.0.0.1:1/test", "body")
  match postResult {
    Ok(resp) => println("error: false")
    Err(e) => println("error: true")
  }

  // http.delete — connection refused
  println("=== http.delete connection refused ===")
  val delResult = http.delete("http://127.0.0.1:1/test")
  match delResult {
    Ok(resp) => println("error: false")
    Err(e) => println("error: true")
  }

  // Response.ok helper — construct directly to test
  // (We can't make real requests, but we can test the method
  // by parsing a successful response if one existed)
  println("=== Response.ok ===")
  // Test the logic directly: status 200-299 is ok
  val ok200 = 200 >= 200 and 200 < 300
  println(f"200 ok: {ok200}")
  val ok404 = 404 >= 200 and 404 < 300
  println(f"404 ok: {ok404}")

  println("=== done ===")
  println("done")
}
